add me.css for me, add email, add setting file

--- a/templates/frame.html
+++ b/templates/frame.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        {% block css_file %}
         <link rel="stylesheet" href="/static/style.css" type = "text/css">
+        {% end %}
         <script src="/static/funny.js" type="text/javascript" charset="utf-8"></script>
         <title>Woodenhouse's Blog</title>
     </head>
