--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,11 @@
 body {
     width: 960px;
     margin: 15px auto;
-    font: normal 14px  Arial, Helvetica, sans-serif, "宋体", "微软雅黑", "华文仿宋";
     word-break:break-all;
     word-wrap: break-word;
+    color: #333;
+    font-size: 14px;
+    font-family: Helvetica,arial,freesans,clean,sans-serif;
 }
 
 a {
