--- a/templates/editme.html
+++ b/templates/editme.html
@@ -14,7 +14,7 @@
                 </li>
                 <li>
                     <label for="article_content"> 正文：</label>
-                    <textarea required = "required" autocomplete = "off" cols=80, rows=40 name="article_content" autofocus >{% raw article["markdown"] if article else "" %}</textarea>
+                    <textarea required = "required" autocomplete = "off" cols=80, rows=40 name="article_content" autofocus >{{ article["markdown"] if article else "" }}</textarea>
                 </li>
                 <li><input type="submit" value="submit"></li>
             </ol>
