--- a/templates/404_500.html
+++ b/templates/404_500.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta http-equiv=refresh content="3;url = http://localhost/">
+<meta http-equiv=refresh content="3;url = http://blog.woodenhouse.com/">
 <link rel="stylesheet" href="{{ static_url("404.css") }}">
 <title>{{ title }}</title> 
 </head>
