--- a/templates/me.html
+++ b/templates/me.html
@@ -1,7 +1,7 @@
 {% extends frame.html %}
 
 {% block css_file %}
-<link rel="stylesheet" href="/static/me.css" type = "text/css">
+<link rel="stylesheet" href= "{{ static_url("me.css") }}" type = "text/css">
 {% end %}
 
 {% block sidebar %} {% end %}
