--- a/templates/frame.html
+++ b/templates/frame.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         {% block css_file %}
-        <link rel="stylesheet" href="/static/style.css" type = "text/css">
+        <link rel="stylesheet" href="{{ static_rul("style.css") }}" type = "text/css">
         {% end %}
-        <script src="/static/funny.js" type="text/javascript" charset="utf-8"></script>
+        <script src= "{{ static_url("funny.js") }}" type="text/javascript" charset="utf-8"></script>
         <title>Woodenhouse's Blog</title>
     </head>
     <body id = "index">
