--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     margin: 20px 0 10px;
