--- a/static/me.css
+++ b/static/me.css
@@ -14,11 +14,11 @@ div#logo nav {
     width: 100%;
 }
 
-section#sidebar a, footer a, header a{
+section#sidebar a, header a{
     color: black;
 }
 
-section#sidebar a:hover, footer a:hover, header a:hover {
+section#sidebar a:hover, header a:hover {
     color: gray;
 }
 
