title change read article

--- a/templates/article.html
+++ b/templates/article.html
@@ -1,5 +1,7 @@
 {% extends frame.html %}
-
+{% block page_title %}
+    {% raw article["title"] %}
+{% end %}
 {% block signin%}
     {% raw signin %}
 {% end %}
